--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ eggs/
 .eggs/
 lib/
 lib64/
-parts/
+parts/  
 sdist/
 var/
 wheels/
@@ -131,3 +131,4 @@ dmypy.json
 doc/
 # Mac OS
 .DS_*
+.vscode/
