--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ eggs/
 .eggs/
 lib/
 lib64/
-parts/  
+parts/
 sdist/
 var/
 wheels/
@@ -132,3 +132,6 @@ doc/
 # Mac OS
 .DS_*
 .vscode/
+
+# pyPLANES
+materials/
