With new format for the test

--- a/.gitignore
+++ b/.gitignore
@@ -142,14 +142,14 @@ _info.txt
 html/
 tests/*
 !tests/one_layer/
-!tests/benchmark_multilayer/
+# !tests/benchmark_multilayer/
 ### Output files
 *.FEM.txt
 *.GM.txt
 *.RM.txt
 doc/
 TeX
-
+DMZ
 # pyPLANES
 *.msh
 *.geo
