--- a/.gitignore
+++ b/.gitignore
@@ -142,11 +142,17 @@ _info.txt
 html/
 tests/*
 !tests/one_layer/
+# !tests/iags/
 # !tests/benchmark_multilayer/
 ### Output files
+*.vtk
 *.FEM.txt
 *.GM.txt
 *.RM.txt
+*.out
+*.res
+*.geo
+*.msh
 doc/
 TeX
 DMZ
